# pv-robotics-frontend-services

./: CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  build.Dockerfile  package-lock.json  package.json  test.txt
pvt-dimensioner/: CMakeLists.txt  README.md  package-lock.json  settings.json
pvt-dimensioner/app/: __init__.py  config.py  version.py
pvt-dimensioner/app/frontend/: vue.config.js
pvt-dimensioner/app/frontend/public/static/assets/robin/fbx/: ConveyorBracket.fbx  Cover.fbx  HubWheel.fbx  Lidar.fbx
pvt-dimensioner/app/frontend/src/: shims-vue.d.ts
pvt-dimensioner/app/frontend/src/lib/navigation/: fipp_client.js
pvt-dimensioner/app/frontend/src/lib/qb/: qb-api.js
pvt-dimensioner/app/frontend/src/lib/robot-client/: robotclient.js
pvt-dimensioner/app/frontend/src/lib/threejs-assets/assets/floor/: floor.js
pvt-dimensioner/app/frontend/src/lib/threejs-assets/scenes/: RobotCoreDevWorld.js
pvt-dimensioner/app/frontend/src/lib/threejs-assets/utils/: uuid.js
pvt-dimensioner/app/frontend/src/pv/fonts/opensans/: stylesheet.css
pvt-dimensioner/app/frontend/src/pv/pages/: app.vue
pvt-dimensioner/app/frontend/src/pv/styles/: fonts.scss
pvt-dimensioner/app/frontend/src/pv/styles/old/: alert.scss  buttons-custom.scss  modals-custom.scss  nav-toggler.scss  tablesorter.scss  type-custom.scss
pvt-dimensioner/app/frontend/src/router/: index.ts
pvt-dimensioner/app/frontend/src/stores/: main.js
pvt-dimensioner/frontend/: views.py
pvt-dimensioner/frontend/public/: index.html
pvt-dimensioner/frontend/public/static/assets/robin/fbx/: CasterFrame.fbx  LED_Back.fbx
pvt-dimensioner/frontend/src/: main.ts
pvt-dimensioner/frontend/src/lib/qb/: qb-ds.js  qb-storage.js
pvt-dimensioner/frontend/src/lib/robot-logic/: robot-logic.js
pvt-dimensioner/frontend/src/lib/threejs-assets/assets/controls/: controls.js
pvt-dimensioner/frontend/src/lib/threejs-assets/assets/corridor/: corridor.js
pvt-dimensioner/frontend/src/lib/threejs-assets/assets/floorplan/: floorplan.js
pvt-dimensioner/frontend/src/lib/threejs-assets/assets/node/: node_window.vue
pvt-dimensioner/frontend/src/lib/threejs-assets/assets/sortplan/: sortplan.js
pvt-dimensioner/frontend/src/lib/threejs-assets/scenes/: OperationWorld.js
pvt-dimensioner/frontend/src/pv/components/: nav-banner.vue
pvt-dimensioner/frontend/src/pv/pages/: login.vue
pvt-dimensioner/frontend/src/pv/styles/: colors.scss  icons.scss  variables.scss
pvt-dimensioner/frontend/src/pv/styles/old/: card-custom.scss  iconav.scss  icons.scss  sidebar.scss  statcard.scss  variables.scss
pvt-dimensioner/frontend/src/router/: index.ts
pvt-dimensioner/frontend/src/views/: dimensioner.vue  operator.vue  sorting.vue
pvt-touchtosort/: .gitignore  CMakeLists.txt  README.md  main.py  pvt-frontend.env  requirements.txt  settings.json
pvt-touchtosort/app/frontend/: package.json
pvt-touchtosort/app/frontend/public/static/assets/robin/fbx/: Conveyor.fbx  Foam.fbx  Frame.fbx  LCD.fbx  LED_Front.fbx  Triton.fbx
pvt-touchtosort/app/frontend/src/: app.vue  main.ts
pvt-touchtosort/app/frontend/src/components/: controls.vue  notifications.vue
pvt-touchtosort/app/frontend/src/lib/qb/: qb-ds.js  qb-logic.js
pvt-touchtosort/app/frontend/src/lib/threejs-assets/assets/floor/: floor.js
pvt-touchtosort/app/frontend/src/lib/threejs-assets/assets/node/: node.js
pvt-touchtosort/app/frontend/src/lib/threejs-assets/assets/robin/: disable_window.vue  robin.js
pvt-touchtosort/app/frontend/src/lib/threejs-assets/assets/sortplan/: direction.js  dropoff-box.js  sortplan.js
pvt-touchtosort/app/frontend/src/lib/threejs-assets/assets/trajectory/: trajectory.js
pvt-touchtosort/app/frontend/src/lib/threejs-assets/assets/zone/: zone.js
pvt-touchtosort/app/frontend/src/lib/threejs-assets/scenes/: OperationWorld.js
pvt-touchtosort/app/frontend/src/lib/threejs-assets/utils/: math.js
pvt-touchtosort/app/frontend/src/pv/styles/: theme.css
pvt-touchtosort/app/frontend/src/pv/styles/old/: alerts-custom.scss  application.scss  button.scss  datepicker.scss  navbar.scss  variables-inverse.scss
pvt-touchtosort/app/frontend/src/router/: index.ts
pvt-touchtosort/app/frontend/src/stores/: main.js
pvt-touchtosort/app/frontend/src/views/: set-direction.vue
scripts/: floorplan.json  server.py  sortplan.json  starter.sh
(+9 files in other folders)
